[gd_scene load_steps=13 format=3 uid="uid://dq1eu5cqj1vuu"]

[ext_resource type="Script" path="res://kastanje/kastanje.gd" id="1_r2gwk"]
[ext_resource type="Texture2D" uid="uid://dp1mebompqdyw" path="res://assets/sprites/zoof_particle.png" id="2_axnrq"]
[ext_resource type="Texture2D" uid="uid://b5032yqs6hfgv" path="res://assets/sprites/kastanje_scaled.png" id="3_7r7ev"]
[ext_resource type="PackedScene" uid="uid://b2kragsn2p1w3" path="res://leaves_falling/leaves_falling.tscn" id="4_2j61d"]

[sub_resource type="Curve" id="Curve_hcr6y"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0y8f2"]
curve = SubResource("Curve_hcr6y")

[sub_resource type="Curve" id="Curve_xk6j7"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.977612, 200), -649.063, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rpbbf"]
curve = SubResource("Curve_xk6j7")

[sub_resource type="Curve" id="Curve_qujha"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.56856, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bym5r"]
curve = SubResource("Curve_qujha")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yrbm8"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 10, 0)
emission_shape = 3
emission_box_extents = Vector3(40, 1, 1)
spread = 180.0
gravity = Vector3(0, -200, 0)
linear_accel_max = 10.0
linear_accel_curve = SubResource("CurveTexture_0y8f2")
radial_accel_curve = SubResource("CurveTexture_rpbbf")
damping_max = 1.0
turbulence_noise_strength = 0.5
turbulence_noise_scale = 1.0
turbulence_noise_speed_random = 0.83
turbulence_initial_displacement_min = -0.1
turbulence_initial_displacement_max = 0.1
turbulence_influence_over_life = SubResource("CurveTexture_bym5r")
sub_emitter_keep_velocity = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwu46"]
radius = 30.0
height = 88.0

[node name="Kastanje" type="Area2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_r2gwk")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 2
amount = 70
process_material = SubResource("ParticleProcessMaterial_yrbm8")
texture = ExtResource("2_axnrq")
lifetime = 1.5
preprocess = 1.0
speed_scale = 5.0
interp_to_end = 0.1
trail_enabled = true
trail_lifetime = 0.1
trail_sections = 5
trail_section_subdivisions = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_7r7ev")
offset = Vector2(5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vwu46")

[node name="LeavesFalling" parent="." instance=ExtResource("4_2j61d")]

[node name="timeBeforeFall" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timeBeforeFall" to="." method="_on_time_before_fall_timeout"]
